--- a/Model money_accuracy_calculation.ipynb
+++ b/Model money_accuracy_calculation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7d81034d",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f40b5537",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ddfe9233",
    "metadata": {},
    "outputs": [
@@ -101,15 +101,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "c:\\Users\\User1\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "c:\\Users\\User1\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "c:\\Users\\User1\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\tsa\\holtwinters\\model.py:903: ConvergenceWarning: Optimization failed to converge. Check mle_retvals.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\User1\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "c:\\Users\\User1\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "c:\\Users\\User1\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
       "  self._init_dates(dates, freq)\n"
      ]
     },
@@ -145,14 +147,14 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>68</td>\n",
-       "      <td>2.315857e+07</td>\n",
+       "      <td>2.290812e+07</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>68</td>\n",
-       "      <td>2.332393e+07</td>\n",
+       "      <td>2.316244e+07</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -166,14 +168,14 @@
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>68</td>\n",
-       "      <td>1.625764e+07</td>\n",
+       "      <td>1.618153e+07</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>68</td>\n",
-       "      <td>1.209424e+07</td>\n",
+       "      <td>1.210257e+07</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -182,14 +184,14 @@
       ],
       "text/plain": [
        "   group_key  train_rows        cv_mae skipped_reason\n",
-       "0          1          68  2.315857e+07           None\n",
-       "1          2          68  2.332393e+07           None\n",
+       "0          1          68  2.290812e+07           None\n",
+       "1          2          68  2.316244e+07           None\n",
        "2          3          68  7.329860e+07           None\n",
-       "3          4          68  1.625764e+07           None\n",
-       "4          5          68  1.209424e+07           None"
+       "3          4          68  1.618153e+07           None\n",
+       "4          5          68  1.210257e+07           None"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5f50c90f",
    "metadata": {},
    "outputs": [
@@ -266,35 +268,35 @@
        "      <td>2024-10-01</td>\n",
        "      <td>5</td>\n",
        "      <td>Vodka</td>\n",
-       "      <td>107592512.0</td>\n",
+       "      <td>105042384.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>86</th>\n",
        "      <td>2024-11-01</td>\n",
        "      <td>5</td>\n",
        "      <td>Vodka</td>\n",
-       "      <td>98740696.0</td>\n",
+       "      <td>97179192.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>87</th>\n",
        "      <td>2024-12-01</td>\n",
        "      <td>5</td>\n",
        "      <td>Vodka</td>\n",
-       "      <td>98998656.0</td>\n",
+       "      <td>93386288.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88</th>\n",
        "      <td>2025-01-01</td>\n",
        "      <td>5</td>\n",
        "      <td>Vodka</td>\n",
-       "      <td>106990720.0</td>\n",
+       "      <td>104968240.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>89</th>\n",
        "      <td>2025-02-01</td>\n",
        "      <td>5</td>\n",
        "      <td>Vodka</td>\n",
-       "      <td>110446408.0</td>\n",
+       "      <td>107721744.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -302,14 +304,14 @@
       ],
       "text/plain": [
        "         date  category_id category_title      revenue\n",
-       "85 2024-10-01            5          Vodka  107592512.0\n",
-       "86 2024-11-01            5          Vodka   98740696.0\n",
-       "87 2024-12-01            5          Vodka   98998656.0\n",
-       "88 2025-01-01            5          Vodka  106990720.0\n",
-       "89 2025-02-01            5          Vodka  110446408.0"
+       "85 2024-10-01            5          Vodka  105042384.0\n",
+       "86 2024-11-01            5          Vodka   97179192.0\n",
+       "87 2024-12-01            5          Vodka   93386288.0\n",
+       "88 2025-01-01            5          Vodka  104968240.0\n",
+       "89 2025-02-01            5          Vodka  107721744.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
